--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,7 @@ project/plugins/project/
 # Scala-IDE specific
 .scala_dependencies
 .worksheet
+/.settings/
+/.cache-main
+/.DS_Store
+/.gitignore
