--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<name>solr-sql</name>
 	<groupId>com.github.bluejoe2008</groupId>
 	<artifactId>solr-sql</artifactId>
-	<version>0.9</version>
+	<version>0.9.1</version>
 	<description>SQL interface over Solr Cloud.</description>
 	<url>https://github.com/bluejoe2008/solr-sql</url>
 	<licenses>
@@ -62,11 +62,37 @@
 		</dependency>
 	</dependencies>
 	<profiles>
-		<!-- mvn clean deploy -P release -->
+		<!-- mvn clean deploy -P release -DskipTests -Dgpg.passphrase= -->
 		<profile>
 			<id>release</id>
 			<build>
 				<plugins>
+					<plugin>
+						<groupId>org.scala-tools</groupId>
+						<artifactId>maven-scala-plugin</artifactId>
+						<executions>
+							<execution>
+								<goals>
+									<goal>compile</goal>
+									<goal>testCompile</goal>
+								</goals>
+							</execution>
+						</executions>
+						<configuration>
+							<scalaVersion>2.11.8</scalaVersion>
+						</configuration>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-compiler-plugin</artifactId>
+						<version>3.7.0</version>
+						<configuration>
+							<source>${java.version}</source>
+							<target>${java.version}</target>
+							<skipMain>true</skipMain>
+							<skip>true</skip>
+						</configuration>
+					</plugin>
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-source-plugin</artifactId>
@@ -83,7 +109,13 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-javadoc-plugin</artifactId>
-						<version>2.9.1</version>
+						<version>2.10.4</version>
+						<configuration>
+							<encoding>UTF-8</encoding>
+							<aggregate>true</aggregate>
+							<charset>UTF-8</charset>
+							<docencoding>UTF-8</docencoding>
+						</configuration>
 						<executions>
 							<execution>
 								<id>attach-javadocs</id>
