--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<name>solr-sql</name>
-	<groupId>com.github.bluejoe2008</groupId>
+	<groupId>org.grapheco</groupId>
 	<artifactId>solr-sql</artifactId>
 	<version>0.9.1</version>
 	<description>SQL interface over Solr Cloud.</description>
